--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist -l tcp://0.0.0.0:${PORT}"
   },
   "dependencies": {
+    "@google/genai": "^1.17.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "@google/genai": "^1.17.0",
-    "three": "^0.168.0",
-    "react-globe.gl": "^2.32.7"
+    "react-globe.gl": "^2.32.7",
+    "serve": "^14.2.5",
+    "three": "^0.168.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
